name:                observatory
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/ane/observatory#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Kalmbach
maintainer:          ane@iki.fi
copyright:           2017 Antoine Kalmbach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5,
                       transformers >= 0.5.2.0
  default-language:    Haskell2010

executable observatory
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.7.1
                     , mtl >= 2.2.1
                     , observatory
                     , text >= 1.2.2
                     , time >= 1.6
                     , transformers >= 0.5.2.0
                     , scotty >= 0.11.0
  default-language:    Haskell2010

test-suite observatory-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , observatory
                     , transformers >= 0.5.2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ane/observatory
